рефакторинг, исправление ошибок
